--- a/index.html
+++ b/index.html
@@ -12,8 +12,25 @@
 </head>
 
 <body>
-    <div class="container">
-   
+    
+    <div class="website-wrapper"> </div>
+    <header>
+        <div>
+            <h1>
+     <img class="logo" src="img/lambda-black.png" alt>
+            <a href="#">Home</a>
+			<a href="#">About</a>
+			<a href="#">Products</a>
+			<a href="#">Blog</a>
+            <a href="#">Contact</a>
+            </h1>
+            </header>
+    <img class="header" src="img/jumbo.jpg" alt>
+
+
+</body>
+    </header>
+
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
