--- a/index123.html
+++ b/index123.html
@@ -56,7 +56,7 @@
                 <div class="box" id="box7"> Box7</div>
                 <div class="box" id="box8"> Box8</div>
                 <div class="box" id="box9">  Box9</div>
-                <div class="box" id="box10"> Box10</div>
+                <div class="box" id="Box10">  Box10</div>
             </div>
         
         </section>
